<resources>
    <string name="app_name">Commits</string>

    <string name="shared_pref_name">commits-shared-preferences</string>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="ok">OK</string>
    <string name="update">Update</string>
    <string name="change_repository">Change repository</string>
    <string name="change_repository_message">Enter a repository to fetch its last commits</string>

    <string name="default_repository">torvalds/linux</string>

    <string name="default_commit_fragment_text">CommitsFragment</string>

    <string name="default_commit_sha_1">7e0165b2f1a912a06e381e91f0f4e495f4ac3736</string>
    <string name="default_commit_author">Linus Torvalds</string>
    <string name="default_commit_title">Merge branch \'akpm\' (patches from Andrew)</string>
    <string name="default_commit_message">
    Merge fixes from Andrew Morton:
     "6 fixes"

    * emailed patches from Andrew Morton &lt;akpm@linux-foundation.org>:
      lib/Kconfig.debug: fix some messed up configurations
      mm: vmscan: protect shrinker idr replace with CONFIG_MEMCG
      kasan: don\'t assume percpu shadow allocations will succeed
      kasan: use apply_to_existing_page_range() for releasing vmalloc shadow
      mm/memory.c: add apply_to_existing_page_range() helper
      kasan: fix crashes on access to memory mapped by vm_map_ram(), mSha1=7e0165b2f1a912a06e381e91f0f4e495f4ac3736)</string>

    <string name="error_retrieving_commits">Error while retrieving commits</string>

    <string name="cd_author_avatar">Author avatar</string>
</resources>
