<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="8dp"
    android:layout_marginTop="8dp"
    android:layout_marginEnd="8dp"
    android:orientation="vertical"
    app:cardBackgroundColor="@color/colorBackground"
    app:cardCornerRadius="5dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/selectableItemBackgroundBorderless">

        <RelativeLayout
            android:id="@+id/layout_commit_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="8dp">

            <ImageView
                android:id="@+id/image_avatar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:contentDescription="@string/cd_author_avatar"
                tools:src="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/text_sha_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignTop="@id/image_avatar"
                android:layout_toEndOf="@id/image_avatar"
                android:ellipsize="end"
                android:maxLines="1"
                android:text="@string/default_commit_sha_1"
                android:textColor="@color/colorText"
                android:textSize="12sp"
                android:textStyle="italic" />

            <TextView
                android:id="@+id/text_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/text_sha_1"
                android:layout_alignStart="@id/text_sha_1"
                android:layout_alignBottom="@id/image_avatar"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="2"
                android:text="@string/default_commit_author"
                android:textColor="@color/colorText"
                android:textSize="22sp" />

        </RelativeLayout>

        <TextView
            android:id="@+id/text_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/layout_commit_summary"
            android:layout_alignStart="@id/layout_commit_summary"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/default_commit_title"
            android:textColor="@color/colorText"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/text_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/text_title"
            android:layout_alignStart="@id/text_title"
            android:ellipsize="end"
            android:maxLines="3"
            android:padding="16dp"
            android:text="@string/default_commit_message"
            android:textColor="@color/colorText" />

    </RelativeLayout>

</androidx.cardview.widget.CardView>